build_err.txt
cargo :    Compiling klc v0.8.4 (F:\开发新的编程语言\klc)
At line:1 char:197
+ ... ; cd "f:\开发新的编程语言\klc" ; $output = cargo build --release 2>&1 | Out-S ...
+                                        ~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   Compiling kl...:\开发新的编程语言\klc):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
warning: unexpected `cfg` condition value: `gui`
  --> src\main.rs:25:7
   |
25 | #[cfg(feature = "gui")]
   |       ^^^^^^^^^^^^^^^ help: remove the condition
   |
   = note: no expected values for `feature`
   = help: consider adding `gui` as a feature in `Cargo.toml`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
   = note: `#[warn(unexpected_cfgs)]` on by default

warning: unexpected `cfg` condition value: `gui`
  --> src\main.rs:53:19
   |
53 |             #[cfg(feature = "gui")]
   |                   ^^^^^^^^^^^^^^^ help: remove the condition
   |
   = note: no expected values for `feature`
   = help: consider adding `gui` as a feature in `Cargo.toml`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration

warning: unexpected `cfg` condition value: `gui`
  --> src\main.rs:55:23
   |
55 |             #[cfg(not(feature = "gui"))]
   |                       ^^^^^^^^^^^^^^^ help: remove the condition
   |
   = note: no expected values for `feature`
   = help: consider adding `gui` as a feature in `Cargo.toml`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration

error[E0624]: method `execute` is private
   --> src\main.rs:80:8
    |
 80 |     vm.execute()
    |        ^^^^^^^ private method
    |
   ::: src\vm.rs:150:5
    |
150 |     fn execute(&mut self, instr: Instruction) -> Result<(), String> {
    |     --------------------------------------------------------------- private method defined here

For more information about this error, try `rustc --explain E0624`.
warning: `klc` (bin "klc") generated 3 warnings
error: could not compile `klc` (bin "klc") due to 1 previous error; 3 warnings emitted
